# norm-ai-takehome-fullstack

./: CLAUDE.md  Dockerfile  README.md  document_summary.txt  extract_pdf_text.py  initial_plan.md  notes.md  parsed_documents_output.json  pyproject.toml  takehome.txt  test_document_parsing.py
app/: datatypes.py  document.py  main.py  qdrant.py  utils.py
docs/: raw_pdf_text.txt
scripts/: document_summary.txt  extract_pdf_text.py  parsed_documents_output.json  test_document_parsing.py
tests/: README.md  test_document_parsing.py  test_document_service.py
