[project]
name = "norm-ai-takehome-fullstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "llama-index>=0.13.3",
    "llama-index-core>=0.13.3",
    "pymupdf>=1.26.4",
    "qdrant-client>=1.15.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
